--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,23 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list >
+            <button 
+                ion-item (click)="onLoad(tabsPage)"
+                *ngIf="!isAuthenticated">
+                Menu A
+            </button>
+            <button 
+                ion-item (click)="onLoad(signinPage)"
+                *ngIf="!isAuthenticated">
+                Menu B
+            </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="tabsPage" #nav></ion-nav>
