--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.subtitle {
+    text-transform: uppercase;
+    color: #CCC;
+}
+
+.threat {
+    background-color: #f53d3d
+}
+
+.opportunity {
+    background-color: #32db64;
+}
