--- a/src/pages/risk-reviews/risk-reviews.scss
+++ b/src/pages/risk-reviews/risk-reviews.scss
@@ -1,3 +1,9 @@
 page-risk-reviews {
+    .social-cards ion-col {
+        padding: 0;
+    }
 
+    ion-content.cards-bg {
+        background-color: #f4f4f7;
+    }
 }
