--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -38,3 +38,15 @@
     color: #32db64;
     font-size: 16px;
 }
+
+.page-title {
+    margin-top: 22px !important;
+}
+
+ion-list-header {
+    margin-bottom: 24px;
+}
+
+.new-button {
+    margin-top: 20px;
+}
