--- a/src/pages/risk-reviews/risk-reviews.scss
+++ b/src/pages/risk-reviews/risk-reviews.scss
@@ -1,9 +1,5 @@
 page-risk-reviews {
-    .social-cards ion-col {
-        padding: 0;
-    }
-
-    ion-content.cards-bg {
-        background-color: #f4f4f7;
+    .revised, .revised ion-item {
+        background-color: #f4f4f4;
     }
 }
