--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
             <button 
                 ion-item (click)="onProjects()"
                 *ngIf="!isAuthenticated">
-                Projects
+                Home
             </button>
             <button 
                 ion-item (click)="onAnalytics()"
