--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -54,3 +54,15 @@ ion-list-header {
 .bacame-problem {
     color: #444444;
 }
+
+.low {
+    color: #32db64;
+}
+
+.medium {
+    color: #ffc527;
+}
+
+.red {
+    color: #f53d3d;
+} 
