--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,6 +29,18 @@
     background-color: #32db64;
 }
 
+.ion-badge-low {
+    background-color: #32db64;
+}
+
+.ion-badge-medium {
+    background-color: #ffc527;
+}
+
+.ion-badge-high {
+    background-color: #f53d3d;
+}
+
 .ion-note-threat {
     color: #f53d3d;
     font-size: 16px;
@@ -63,6 +75,18 @@ ion-list-header {
     color: #ffc527;
 }
 
-.red {
+.high {
     color: #f53d3d;
 } 
+
+.threat {
+    color: #f53d3d;
+}
+
+.opportunity {
+    color: #32db64;
+}
+
+.divider {
+    height: 30px;
+}
