--- a/src/pages/analytics/analytics.scss
+++ b/src/pages/analytics/analytics.scss
@@ -1,6 +1,10 @@
 page-analytics {
     .list-content {
-        padding-left: 0;
-        padding-right: 0;
-    }  
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    
+    .title {
+        font-weight: bold;
+    }
 }
